--- a/BlocNotes/BlocNotes/Base.lproj/Main.storyboard
+++ b/BlocNotes/BlocNotes/Base.lproj/Main.storyboard
@@ -122,6 +122,7 @@
         <!--Root View Controller-->
         <scene sceneID="iW0-UZ-W5K">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Yih-Ce-3TH" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="3zQ-Uv-b7k" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="aIb-uV-hox">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -142,13 +143,13 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="wuc-mg-NwB"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Yih-Ce-3TH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2296" y="-630"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="I5x-s9-nWP">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qf2-bg-NPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="ekF-mi-4BL" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Bh1-lP-tNC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -158,7 +159,6 @@
                         <segue destination="3zQ-Uv-b7k" kind="relationship" relationship="rootViewController" id="zrA-7v-iZ9"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Qf2-bg-NPq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1476" y="-630"/>
         </scene>
@@ -179,6 +179,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6S0-TO-JiA"/>
+        <segue reference="Tll-UG-LXB"/>
     </inferredMetricsTieBreakers>
 </document>
