--- a/BlocNotes/BlocNotes/Base.lproj/Main.storyboard
+++ b/BlocNotes/BlocNotes/Base.lproj/Main.storyboard
@@ -108,12 +108,62 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="All Notes" id="5kJ-IX-Jhr">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="yhm-S5-VUa"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="yhm-S5-VUa">
+                            <connections>
+                                <segue destination="zQb-nn-vUY" kind="presentation" identifier="addNote" id="deH-pP-GoB"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="709" y="-630"/>
+        </scene>
+        <!--Add Note View Controller-->
+        <scene sceneID="JaN-HA-fjo">
+            <objects>
+                <viewController id="zQb-nn-vUY" customClass="AddNoteViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iUx-F0-phR"/>
+                        <viewControllerLayoutGuide type="bottom" id="LxP-TW-Q71"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="26t-uE-5lJ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4P3-ru-y19">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="New Note" id="Nwb-Sn-Hjj">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Wl5-V5-0bk">
+                                            <connections>
+                                                <action selector="cancelPressed:" destination="zQb-nn-vUY" id="fUi-PV-Shq"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" systemItem="save" id="r33-Ui-DhL">
+                                            <connections>
+                                                <action selector="savePressed:" destination="zQb-nn-vUY" id="2wU-Ui-swg"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Write your note ..." translatesAutoresizingMaskIntoConstraints="NO" id="yuO-ug-fBg">
+                                <rect key="frame" x="16" y="75" width="568" height="505"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="textView" destination="yuO-ug-fBg" id="PIV-ny-Cr1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cTb-LA-0sa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1508" y="-630"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="r7l-gg-dq7">
@@ -132,6 +182,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6S0-TO-JiA"/>
+        <segue reference="Tll-UG-LXB"/>
     </inferredMetricsTieBreakers>
 </document>
