--- a/BlocNotes/BlocNotes/Base.lproj/Main.storyboard
+++ b/BlocNotes/BlocNotes/Base.lproj/Main.storyboard
@@ -209,6 +209,7 @@
         <!--Root View Controller-->
         <scene sceneID="IQs-8e-uBo">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YFy-PP-fDl" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="epG-wW-aI9" customClass="SearchResultsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="LP7-ha-IRZ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -220,6 +221,9 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="414-eq-tYI" id="yws-dN-e86">
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showSearchedNote" id="ik4-CE-IeA"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -229,13 +233,13 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="tJu-bf-CE9"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YFy-PP-fDl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="904" y="-1443"/>
+            <point key="canvasLocation" x="788" y="-1349"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TLm-cS-OEY">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sXf-If-Khx" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController storyboardIdentifier="TableSearchResultsNavController" id="jFD-kU-78D" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="TXn-sF-yNT">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -245,7 +249,6 @@
                         <segue destination="epG-wW-aI9" kind="relationship" relationship="rootViewController" id="ei4-pY-z3O"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sXf-If-Khx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="32" y="-1443"/>
         </scene>
@@ -266,6 +269,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6S0-TO-JiA"/>
+        <segue reference="ik4-CE-IeA"/>
     </inferredMetricsTieBreakers>
 </document>
